--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,31 @@
+html, body {
+    height: 100%;
+}
+
 body {
     font-family: Arial, sans-serif;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
     line-height: 1.6;
+    background-color: rgb(244, 248, 247);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+    padding-bottom: 5%;
 }
 
 .container {
-    background-color: #f4f4f4;
+    background-color: #e2e1e1;
     padding: 20px;
     border-radius: 5px;
 }
@@ -16,12 +34,31 @@ body {
     margin-bottom: 15px;
 }
 
+button {
+    margin-top: 5%;
+    scale: 1.1;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
 .error {
-    color: red;
-    background-color: #ffeeee;
+    color: rgb(243, 105, 105);
+    background-color: #ffffff;
     padding: 10px;
     margin-bottom: 15px;
     border-radius: 5px;
+}
+
+.notice {
+    background-color: #e3d7d7;
+    color: #000000;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
 }
 
 .hidden {
@@ -33,12 +70,6 @@ body {
     background-color: white;
     padding: 15px;
     border-radius: 5px;
-}
-
-#monthlyUniqueIds {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 .results-table {
@@ -67,3 +98,31 @@ body {
     background-color: #f5f5f5;
 }
 
+.file-upload-row {
+    display: flex;
+    justify-content: center; /* Changed from space-between to center */
+    margin-bottom: 20px;
+}
+
+.file-upload {
+    flex: 0 1 auto; 
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+.file-upload input[type="file"] {
+    width: 100%;
+    margin-left: 30%;
+    color: rgba(0, 0, 0, 0);
+    padding: 10px;
+    border-radius: 4px;
+}
+
+.file-name {
+    margin-top: 5px;
+    font-size: 0.9em;
+    color: #666;
+    width: 100%;
+}
