--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-html, body {
-    height: 100%;
-}
-
 body {
     font-family: Arial, sans-serif;
     max-width: 800px;
@@ -43,15 +39,7 @@ button {
     
 }
 
-.error {
-    color: rgb(243, 105, 105);
-    background-color: #ffffff;
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 5px;
-}
-
-.notice {
+.notice, .error {
     background-color: #e3d7d7;
     color: #000000;
 
@@ -59,6 +47,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5%;
+    text-align: center;
 }
 
 .hidden {
@@ -96,33 +85,4 @@ button {
 
 .results-table tr:hover {
     background-color: #f5f5f5;
-}
-
-.file-upload-row {
-    display: flex;
-    justify-content: center; /* Changed from space-between to center */
-    margin-bottom: 20px;
-}
-
-.file-upload {
-    flex: 0 1 auto; 
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-
-.file-upload input[type="file"] {
-    width: 100%;
-    margin-left: 30%;
-    color: rgba(0, 0, 0, 0);
-    padding: 10px;
-    border-radius: 4px;
-}
-
-.file-name {
-    margin-top: 5px;
-    font-size: 0.9em;
-    color: #666;
-    width: 100%;
 }
