--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,24 @@ body {
     margin: 0 auto;
     padding: 20px;
     line-height: 1.6;
+    background-color: rgb(244, 248, 247);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+    padding-bottom: 5%;
 }
 
 .container {
-    background-color: #f4f4f4;
+    background-color: #e2e1e1;
     padding: 20px;
     border-radius: 5px;
 }
@@ -16,12 +30,24 @@ body {
     margin-bottom: 15px;
 }
 
-.error {
-    color: red;
-    background-color: #ffeeee;
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 5px;
+button {
+    margin-top: 5%;
+    scale: 1.1;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.notice, .error {
+    background-color: #e3d7d7;
+    color: #000000;
+
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    text-align: center;
 }
 
 .hidden {
@@ -33,12 +59,6 @@ body {
     background-color: white;
     padding: 15px;
     border-radius: 5px;
-}
-
-#monthlyUniqueIds {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 .results-table {
@@ -66,4 +86,3 @@ body {
 .results-table tr:hover {
     background-color: #f5f5f5;
 }
-
